<resources>
    <string name="app_name">My Application</string>
    <string name="textview">judul</string>
    <string name="sate">Sate</string>
    <string name="bakso">Bakso</string>
    <string name="nasi">nasgor</string>
    <string name="ayam">ayamgoreng</string>
    <string name="mieayam">mieayam</string>
    <string name="rendang">rendang</string>
    <string name="button">Pilih</string>
    <string name="copy">copy</string>
</resources>